--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/green-bean-casserole.html">Green Bean Casserole</a>
+    <ul>
+        <li><a href="recipes/green-bean-casserole.html">Green Bean Casserole</a></li>
+        <li><a href="recipes/grilled-cheese.html">Grilled Cheese</a></li>
+        <li><a href="recipes/mocha.html">Mocha</a></li>
+    </ul>
 </body>
 </html>
