Added images to recipe pages.

--- a/recipes/green-bean-casserole.html
+++ b/recipes/green-bean-casserole.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Green Bean Casserole</h1>
-    <img src="" alt="Green Bean Casserole">
+    <img src="../images/green-bean-casserole.jpg" alt="Green Bean Casserole">
     
     <h3>Description</h3>
     <p>A creamy side dish made from green beans and cream of mushroom soup and topped with crispy onions.</p>
