--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Grilled Cheese</h1>
-    <img src="" alt="Grilled Cheese">
+    <img src="../images/grilled-cheese.jpg" alt="Grilled Cheese">
     
     <h3>Description</h3>
     <p>A warm, gooey, and cheesey sandwich.</p>
