--- a/recipes/mocha.html
+++ b/recipes/mocha.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Mocha</h1>
-    <img src="" alt="Mocha">
+    <img src="../images/mocha.jpeg" alt="Mocha">
     
     <h3>Description</h3>
     <p>A warm drink of chocolate and coffee.</p>
@@ -17,12 +17,14 @@
     <ul>
         <li>1 cup of hot coffee</li>
         <li>2 Tbsps of hot cocoa mix</li>
+        <li>Whipped chream (optional)</li>
     </ul>
 
     <h3>Steps</h3>
     <ol>
         <li>In a mug, combine hot coffee with cocoa mix.</li>
         <li>Stir until mix has dissolved.</li>
+        <li>Top with whipped cream, if desired.</li>
     </ol>
 </body>
 </body>
