--- a/recipes/green-bean-casserole.html
+++ b/recipes/green-bean-casserole.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Recipes - Green Bean Casserole</title>
 </head>
 <body>
-    <h1>Green Bean Casserole</h1>
-    <img src="../images/green-bean-casserole.jpg" alt="Green Bean Casserole">
+    <h1 class="recipe-name">Green Bean Casserole</h1>
+    <img src="../images/green-bean-casserole.jpg" alt="Green Bean Casserole" class="recipe-img">
     
     <h3>Description</h3>
     <p>A creamy side dish made from green beans and cream of mushroom soup and topped with crispy onions.</p>
