--- a/recipes/mocha.html
+++ b/recipes/mocha.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Recipes - Mocha</title>
 </head>
 <body>
-    <h1>Mocha</h1>
-    <img src="../images/mocha.jpeg" alt="Mocha">
+    <h1 class="recipe-name">Mocha</h1>
+    <img src="../images/mocha.jpeg" alt="Mocha" class="recipe-img">
     
     <h3>Description</h3>
     <p>A warm drink of chocolate and coffee.</p>
